# lvfs-mirror

./: .gitignore  .pre-commit-config.yaml  .pyre_configuration  LICENSE.txt  README.md  mirror.conf  pylintrc  pyproject.toml
.github/workflows/: python-publish.yml
lvfs_mirror/: __main__.py  config.py  jcat.py  lvfs_mirror.py  utils.py
scripts/: build.sh  check.sh
